examples/c/error-codes/violates-constraint/fatal/CV-CDE1-bad-static.output
CV-CDE1-bad-static.c:3:13: error: expression is not an integer constant expression
enum e {a = 5.5};
            ^~~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
